Changed library stuff in order to fix the layout issue
I changed some values of "top" properties directly on the library. I've set the popup "position" to "fixed" because I commented the code that was handling the positions when scrolling. That had to be made because when we scrolled, the page would become infinite. Besides, "position: fixed" exists for some purpose.

--- a/assets/css/fancybox/jquery.fancybox-1.2.6.css
+++ b/assets/css/fancybox/jquery.fancybox-1.2.6.css
@@ -9,7 +9,7 @@ div#fancy_overlay {
 }
 
 div#fancy_loading {
-	position: absolute;
+	position: fixed;
 	height: 40px;
 	width: 40px;
 	cursor: pointer;
@@ -20,7 +20,7 @@ div#fancy_loading {
 }
 
 div#fancy_loading div {
-	position: absolute;
+	position: relative;
 	top: 0;
 	left: 0;
 	width: 40px;
@@ -29,7 +29,7 @@ div#fancy_loading div {
 }
 
 div#fancy_outer {
-	position: absolute;
+	position: fixed;
     top: 0;
     left: 0;
     z-index: 90;
